# graif

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  configure.ac  configure.in
data/: Makefile  Makefile.am  config.xml  graif.xml
debian/: Makefile  Makefile.am  changelog  control  copyright  files  files~  menu  rules  watch
deskotp/: graif.desktop.in
desktop/: Makefile.am
icons/: Makefile.am  bar_graph.xpm  book_blue.xpm  book_green.xpm  book_open.xpm  book_red.xpm  book_yellow.xpm  pig.xpm  pig_s.xpm
plugins/: Makefile.am  save_csv.rb
src/: Makefile.am  config.rb  dialog.rb  goto_dialog.rb  graph.rb  icons.rb  main.rb  make_graif  plugins.rb  profile  raif.rb  raif_ui.rb  receipt_dialog.rb  save_csv.rb  search_dialog.rb  setting_panel.rb  setup_window.rb  test.rb  util.rb
